--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^2.9.14",
+    "lodash": "^3.10.0",
     "request": "^2.55.0"
   },
   "devDependencies": {
